cros: Do not allow password submit on empty password.

Tap to unlock still should work on an empty password, though.

Bug: 839320
Change-Id: Id5fd17c9428ddc2b6823cd3c63a5f21aa486b860
Reviewed-on: https://chromium-review.googlesource.com/1164257
Commit-Queue: Jacob Dufault <jdufault@chromium.org>
Reviewed-by: Xiaoyin Hu <xiaoyinh@chromium.org>
Cr-Commit-Position: refs/heads/master@{#581278}
Former-commit-id: 21cd56637c8689be7d5bb80ecc666e4593cbb2d7