ash/login/ui/login_password_view.h
@@ -75,6 +75,9 @@ class ASH_EXPORT LoginPasswordView : public views::View,
             const OnEasyUnlockIconHovered& on_easy_unlock_icon_hovered,
             const OnEasyUnlockIconTapped& on_easy_unlock_icon_tapped);
 
+  // Is the password field enabled when there is no text?
+  void SetEnabledOnEmptyPassword(bool enabled);
+
   // Change the active icon for easy unlock.
   void SetEasyUnlockIcon(mojom::EasyUnlockIconId id,
                          const base::string16& accessibility_label);
@@ -136,6 +139,9 @@ class ASH_EXPORT LoginPasswordView : public views::View,
 
   OnPasswordSubmit on_submit_;
   OnPasswordTextChanged on_password_text_changed_;
+
+  // Is the password field enabled when there is no text?
+  bool enabled_on_empty_password_ = false;
 
   views::View* password_row_ = nullptr;
 
